--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -24,7 +24,7 @@ on:
 
 jobs:
   tfsec_loki:
-    name: aws
+    name: loki
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -37,7 +37,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   tfsec_prometheus:
-    name: aws
+    name: prometheus
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -50,7 +50,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   tfsec_thanos:
-    name: aws
+    name: thanos
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -63,7 +63,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   tfsec_tempo:
-    name: aws
+    name: tempo
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
