--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -30,6 +30,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Terraform security scan master
-        uses: aquasecurity/tfsec-pr-commenter-action@v0.1.10 #triat/terraform-security-scan@master
+        uses: triat/terraform-security-scan@v3.0.0
         env:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
