--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Tfsec
+name: Project / Tfsec
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the main branch
@@ -29,8 +29,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Terraform security scan master
-        # uses: triat/terraform-security-scan@v3.0.0
-        uses: aquasecurity/tfsec-pr-commenter-action@main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Terraform security scan module
+        uses: aquasecurity/tfsec-pr-commenter-action@v1.0.2
+        with:
+          github_token: ${{ github.token }}
+          working_dir: .
