--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,8 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+#
+# SPDX-License-Identifier: Apache-2.0
 
 # Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
 
@@ -67,5 +69,5 @@ repos:
     exclude: ^\.secrets/.*$|^\.git-crypt/.*$
     args:
     - --license-filepath
-    - hack/config/license.txt
+    - LICENSE
     # - --remove-header
