--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 ---
-name: Project / Tfsec
+name: Terraform / Security
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the main branch
