--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -38,12 +38,12 @@ jobs:
 
       - name: Terraform Format
         run: terraform fmt -check
-        working-directory: ${{ matrix.module }}
+        working-directory: modules/${{ matrix.module }}
 
       - name: Terraform Init
         run: terraform init
-        working-directory: ${{ matrix.module }}
+        working-directory:  modules/${{ matrix.module }}
 
       - name: Terraform Validate
         run: terraform validate -no-color
-        working-directory: ${{ matrix.module }}
+        working-directory:  modules/${{ matrix.module }}
