--- a/.github/workflows/oci.yaml
+++ b/.github/workflows/oci.yaml
@@ -15,9 +15,10 @@ env:
 jobs:
   publish-oci:
     permissions:
-      contents: write # to push chart release and create a release (helm/chart-releaser-action)
-      packages: write # needed for ghcr access
-      id-token: write # needed for keyless signing
+      attestations: write # need for Artifact Attestations
+      contents: write     # to push chart release and create a release (helm/chart-releaser-action)
+      id-token: write     # needed for keyless signing
+      packages: write     # needed for ghcr access
 
     runs-on: ubuntu-latest
 
