--- a/.github/workflows/oci.yaml
+++ b/.github/workflows/oci.yaml
@@ -61,7 +61,7 @@ jobs:
             --artifact-type application/vnd.terraform.module \
             --annotation "org.opencontainers.image.ref.name=${{ steps.release-details.outputs.release_name }}" \
             --annotation "org.opencontainers.image.documentation=https://github.com/${{ github.repository }}" \
-            --annotation "org.opencontainers.image.documentation=https://github.com/${{ github.repository }}/issues" \
+            --annotation "org.opencontainers.image.issue-tracker=https://github.com/${{ github.repository }}/issues" \
             --annotation "org.opencontainers.image.title=Terraform AWS Observability Module" \
             --annotation "org.opencontainers.image.description=Provision AWS observability stack (Prometheus, Grafana, X-Ray, CloudWatch) with Terraform" \
             --annotation "org.opencontainers.image.authors=Nicolas Lamirault <nicolas.lamirault@gmail.com>" \
