--- a/.github/workflows/terraform-security.yml
+++ b/.github/workflows/terraform-security.yml
@@ -21,15 +21,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - name: Run Trivy vulnerability scanner in IaC mode
-        uses: aquasecurity/trivy-action@0.28.0
+      - name: Run Trivy
+        uses: aquasecurity/trivy-action@76071ef0d7ec797419534a183b498b4d6366cf37 # 0.31.0
         with:
-          scan-type: 'config'
+          scan-type: 'fs'
+          scan-ref: '.'
           hide-progress: true
-          format: 'sarif'
-          output: 'trivy-results.sarif'
+          format: 'github'
           exit-code: '1'
-          severity: 'CRITICAL,HIGH'
+          trivy-config: trivy.yaml
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
