--- a/.github/workflows/terraform-build.yml
+++ b/.github/workflows/terraform-build.yml
@@ -5,6 +5,7 @@ on:
   pull_request:
     paths:
       - modules/**
+  workflow_dispatch:  # Allow manual triggering
 
 permissions:
   contents: read
