--- a/.github/workflows/terraform-oci.yaml
+++ b/.github/workflows/terraform-oci.yaml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
+# SPDX-License-Identifier: Apache-2.0
+
 ---
 name: Terraform / OCI
 
